fixed interface of feature learning

--- a/submission_pipeline.ipynb
+++ b/submission_pipeline.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -71,11 +71,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrongly clusterized pins: 30214\n",
+      "Wrongly clusterized pins: 8023\n",
+      "Wrongly clusterized pins: 3835\n",
+      "Wrongly clusterized pins: 2405\n",
+      "Wrongly clusterized pins: 1712\n",
+      "Wrongly clusterized pins: 1417\n",
+      "Wrongly clusterized pins: 1145\n",
+      "Wrongly clusterized pins: 958\n",
+      "Wrongly clusterized pins: 806\n",
+      "Wrongly clusterized pins: 715\n",
+      "Wrongly clusterized pins: 623\n",
+      "Wrongly clusterized pins: 557\n",
+      "Wrongly clusterized pins: 463\n",
+      "Wrongly clusterized pins: 411\n",
+      "Wrongly clusterized pins: 373\n",
+      "Wrongly clusterized pins: 365\n",
+      "Wrongly clusterized pins: 301\n",
+      "Wrongly clusterized pins: 309\n",
+      "Wrongly clusterized pins: 292\n",
+      "Wrongly clusterized pins: 300\n",
+      "Wrongly clusterized pins: 294\n",
+      "Wrongly clusterized pins: 270\n",
+      "Wrongly clusterized pins: 261\n",
+      "Wrongly clusterized pins: 251\n",
+      "Wrongly clusterized pins: 227\n",
+      "Wrongly clusterized pins: 202\n",
+      "Wrongly clusterized pins: 194\n",
+      "Wrongly clusterized pins: 197\n",
+      "Wrongly clusterized pins: 197\n",
+      "Wrongly clusterized pins: 194\n",
+      "Wrongly clusterized pins: 182\n",
+      "Wrongly clusterized pins: 173\n",
+      "Wrongly clusterized pins: 180\n",
+      "Wrongly clusterized pins: 154\n",
+      "Wrongly clusterized pins: 155\n",
+      "Wrongly clusterized pins: 148\n",
+      "Wrongly clusterized pins: 144\n",
+      "Wrongly clusterized pins: 138\n",
+      "Wrongly clusterized pins: 135\n",
+      "Wrongly clusterized pins: 148\n",
+      "Wrongly clusterized pins: 137\n",
+      "Wrongly clusterized pins: 131\n",
+      "Wrongly clusterized pins: 110\n",
+      "Wrongly clusterized pins: 104\n",
+      "Wrongly clusterized pins: 112\n",
+      "Wrongly clusterized pins: 107\n",
+      "Wrongly clusterized pins: 91\n",
+      "Wrongly clusterized pins: 68\n",
+      "Wrongly clusterized pins: 77\n",
+      "Wrongly clusterized pins: 70\n",
+      "Wrongly clusterized pins: 53\n",
+      "Wrongly clusterized pins: 46\n",
+      "Wrongly clusterized pins: 39\n",
+      "Wrongly clusterized pins: 44\n",
+      "Wrongly clusterized pins: 31\n",
+      "Wrongly clusterized pins: 34\n",
+      "Wrongly clusterized pins: 36\n",
+      "Wrongly clusterized pins: 38\n",
+      "Wrongly clusterized pins: 34\n",
+      "Wrongly clusterized pins: 27\n",
+      "Wrongly clusterized pins: 23\n",
+      "Wrongly clusterized pins: 24\n",
+      "Wrongly clusterized pins: 17\n",
+      "Wrongly clusterized pins: 13\n",
+      "Wrongly clusterized pins: 12\n",
+      "Wrongly clusterized pins: 13\n",
+      "Wrongly clusterized pins: 13\n",
+      "Wrongly clusterized pins: 18\n",
+      "Wrongly clusterized pins: 13\n",
+      "Wrongly clusterized pins: 9\n",
+      "Wrongly clusterized pins: 11\n",
+      "Wrongly clusterized pins: 10\n",
+      "Wrongly clusterized pins: 15\n",
+      "Wrongly clusterized pins: 10\n",
+      "Wrongly clusterized pins: 10\n",
+      "Wrongly clusterized pins: 7\n",
+      "Wrongly clusterized pins: 6\n",
+      "Wrongly clusterized pins: 8\n",
+      "Wrongly clusterized pins: 7\n",
+      "Wrongly clusterized pins: 9\n",
+      "Wrongly clusterized pins: 15\n",
+      "Wrongly clusterized pins: 14\n",
+      "Wrongly clusterized pins: 18\n",
+      "Wrongly clusterized pins: 16\n",
+      "Wrongly clusterized pins: 18\n",
+      "Wrongly clusterized pins: 19\n",
+      "Wrongly clusterized pins: 17\n",
+      "Wrongly clusterized pins: 12\n",
+      "Wrongly clusterized pins: 11\n",
+      "Wrongly clusterized pins: 18\n",
+      "Wrongly clusterized pins: 23\n",
+      "Wrongly clusterized pins: 26\n",
+      "Wrongly clusterized pins: 34\n",
+      "Wrongly clusterized pins: 31\n",
+      "Wrongly clusterized pins: 29\n",
+      "Wrongly clusterized pins: 29\n",
+      "Wrongly clusterized pins: 29\n",
+      "Wrongly clusterized pins: 40\n",
+      "Wrongly clusterized pins: 38\n",
+      "Wrongly clusterized pins: 40\n",
+      "Wrongly clusterized pins: 39\n",
+      "Wrongly clusterized pins: 46\n",
+      "Wrongly clusterized pins: 46\n",
+      "Wrongly clusterized pins: 42\n",
+      "Wrongly clusterized pins: 39\n",
+      "Wrongly clusterized pins: 37\n",
+      "Wrongly clusterized pins: 44\n",
+      "Wrongly clusterized pins: 41\n",
+      "Wrongly clusterized pins: 45\n",
+      "Wrongly clusterized pins: 44\n",
+      "Wrongly clusterized pins: 34\n",
+      "Wrongly clusterized pins: 45\n",
+      "Wrongly clusterized pins: 23\n",
+      "Wrongly clusterized pins: 19\n",
+      "Wrongly clusterized pins: 17\n",
+      "Wrongly clusterized pins: 11\n",
+      "Wrongly clusterized pins: 7\n",
+      "Wrongly clusterized pins: 7\n",
+      "Wrongly clusterized pins: 5\n",
+      "Wrongly clusterized pins: 2\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 4\n",
+      "Wrongly clusterized pins: 1\n",
+      "Wrongly clusterized pins: 0\n"
+     ]
+    }
+   ],
    "source": [
     "pins_dict_train = pins_generation(training_idx=training_idx, ratio_pins_per_image=33, patch_size=16)\n",
     "pins_train = pins_dict_train[\"pins\"]\n",
@@ -94,9 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -113,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -183,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -205,11 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision on the test set is of 0.312\n"
+     ]
+    }
+   ],
    "source": [
     "Y_pred = np.zeros((X_test.shape[0], n_classes))\n",
     "for dig in range(n_classes):\n",
@@ -223,6 +363,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -231,11 +380,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-8e94499be72b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# Submission\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mlabels_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_labels_eval\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkernel_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclassifier_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'PdT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/pierre/MVA/kernel-digits-challenge/tools/submission.py\u001b[0m in \u001b[0;36mlabels_to_csv\u001b[0;34m(Y, kernel, algo, user, file_name)\u001b[0m\n\u001b[1;32m     26\u001b[0m         )\n\u001b[1;32m     27\u001b[0m     \u001b[0moutfolder_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"submissions\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutfolder_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutfolder_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "X_eval = load_images(type=\"test\")\n",
     "n_eval = X_eval.shape[0]\n",
